fix background colour on IE8

--- a/django/static/global.css
+++ b/django/static/global.css
@@ -1,4 +1,4 @@
-body{margin:20px auto;max-width:900px;line-height:1.6;font-size:1.125rem;color:#444;padding:0 0.8rem}
+body{margin:20px auto;max-width:900px;line-height:1.6;font-size:1.125rem;background:#000;padding:0 0.8rem}
 h1,h2,h3{line-height:1.2}
 .background{background:#000;position:fixed;top:0;right:0;bottom:0;left:0;z-index:-99;}
 .video-container,
